Small CSS fix on product names overflowing

--- a/wp-content/themes/sushi/style.css
+++ b/wp-content/themes/sushi/style.css
@@ -49,6 +49,7 @@ h2.woocommerce-loop-product__title{
 	margin-left:0px;
 	text-transform: uppercase;
 	font-weight: normal;
+	white-space: normal;
 }
 
 .container {
